[package]
name = "longan-nano-max30102"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.de>"]
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.4.0"
embedded-hal = "0.2.5"
nb = "1.0.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
max3010x = "0.1.0"
embedded-graphics = "0.6"
heapless = "0.5"
longan-nano = { version = "0.2", features = ["lcd"] }